--- a/facebook-lite/build.gradle
+++ b/facebook-lite/build.gradle
@@ -1,14 +1,18 @@
 plugins {
-    alias(libs.plugins.androidLibrary)
-    alias(libs.plugins.jetbrainsKotlinAndroid)
+    id 'com.android.library'
+    id 'kotlin-android'
+    id 'kotlin-parcelize'
 }
 
 android {
-    namespace 'com.facebook.sdk.lite'
-    compileSdk 34
+//    namespace 'com.facebook.sdk.lite'
+    compileSdkVersion 33
 
     defaultConfig {
-        minSdk 24
+        minSdkVersion 24
+        targetSdkVersion 33
+//        versionCode 1
+//        versionName "1.0"
 
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
         consumerProguardFiles "consumer-rules.pro"
@@ -31,10 +35,21 @@ android {
 
 dependencies {
 
-    implementation libs.androidx.core.ktx
-    implementation libs.androidx.appcompat
-    implementation libs.material
-    testImplementation libs.junit
-    androidTestImplementation libs.androidx.junit
-    androidTestImplementation libs.androidx.espresso.core
+    implementation fileTree(dir: "libs", include: ["*.jar"])
+    implementation 'androidx.appcompat:appcompat:1.3.1'
+
+    // Kotlin & Coroutines
+    //implementation 'androidx.core:core-ktx:1.3.2'
+    implementation "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
+    //implementation "org.jetbrains.kotlinx:kotlinx-coroutines-android:$coroutineVersion"
+
+    //facebook login
+    implementation 'com.facebook.android:facebook-login:16.2.0'
+
+    //gson
+    implementation 'com.google.code.gson:gson:2.10.1'
+
+    testImplementation 'junit:junit:4.12'
+    androidTestImplementation 'androidx.test.ext:junit:1.1.3'
+    androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
 }
